--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">WeatherAdapter</string>
+    <string name="app_name">Weather App</string>
+    <string name="enter_city_name">Enter city name</string>
+    <string name="search">Search</string>
+    <string name="loading_weather">Loading weather information…</string>
+    <string name="retry">Retry</string>
+    <string name="temperature_format">%.1f°C</string>
+    <string name="humidity_format">Humidity: %d%%</string>
+    <string name="wind_speed_format">Wind Speed: %.1f m/s</string>
+    <string name="last_updated">Last updated: %s</string>
+    <string name="error_no_internet">No internet connection</string>
+    <string name="error_city_not_found">City not found</string>
+    <string name="error_generic">An error occurred. Please try again.</string>
 </resources>
